--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body style="min-width: 15em">
-    <p style="font-size: 1em; text-align: center;">Good luck & high rating!</p>
+    <p style="font-size: 1em; text-align: center;">Better luck next time & keep solving question</p>
   </body>
 </html>
